--- a/experience.html
+++ b/experience.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Natthapol Experiences</title>
-    <link rel="stylesheet" href="Css/experiencse.css">
+    <link rel="stylesheet" href="css/experiencse.css">
     <link rel="icon" href="image/Khet Circle.png">
 </head>
 <body>
